--- a/frontend/src/admin/ManageUsers/components/SalesReport.module.css
+++ b/frontend/src/admin/ManageUsers/components/SalesReport.module.css
@@ -64,7 +64,7 @@
 
   .cur{
     color: #000;
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     font-size: 23.067px;
     font-style: normal;
     font-weight: 700;
@@ -73,7 +73,7 @@
   }
   .prev{
     color: #000;
-    font-family: 'SF Pro Display';
+    font-family: 'Poppins';
     font-size: 13.456px;
     font-style: normal;
     font-weight: 400;
@@ -83,7 +83,7 @@
   }
   .change{
     color: var(--Green-500, #22C55E);
-  font-family: 'SF Pro Display';
+  font-family: 'Poppins';
   font-size: 13.456px;
   font-style: normal;
   font-weight: 700;
@@ -163,7 +163,7 @@
   .ordersT{
     margin-top: -5%;
     color: var(--Text-900, #0F172A);
-  font-family: 'SF Pro Display';
+  font-family: 'Poppins';
   font-size: 11.614px;
   font-style: normal;
   font-weight: 400;
@@ -233,7 +233,7 @@
  }
  .title{
     color: #000;
-font-family: 'Inter';
+font-family: 'Poppins';
 font-size: 15px;
 margin-bottom: 7%;
 font-style: normal;
@@ -253,11 +253,15 @@ line-height: normal;
  }
 .inputField{
     display: flex;
-width: 151px;
+width: 170px;
 flex-direction: column;
 align-items: flex-start;
 gap: 8px;
 border-radius: 25px;
+background-color: rgba(217, 217, 217, 0.44);
+outline: none;
+border: none;
+text-align: center;
 }
 .filterButton{
     position: inherit;
