--- a/frontend/src/admin/ManageUsers/components/UserDetails.module.css
+++ b/frontend/src/admin/ManageUsers/components/UserDetails.module.css
@@ -67,10 +67,10 @@ margin-top: 0%;
     font-weight: 600;
 }
 .fieldGroup {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px; /* Adjust the gap as needed */
-    margin-bottom: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-bottom: 6%;
   }
   .images{
     display: flex;
@@ -85,12 +85,13 @@ margin-top: 0%;
     flex:  1;
     min-width: 150px;
     max-width: 190px;
-    margin-left: 6%;
+    margin-left: 8%;
   }
   .nameField{
     flex:  1;
     min-width: 240px;
     max-width: 190px;
+    margin-bottom: 2%;
   }
   .form{
     position: absolute;
