Patient signup for pharmacy and clinic simaltaneously

--- a/frontend/src/pharmacist/pages/pharmacistRequest.module.css
+++ b/frontend/src/pharmacist/pages/pharmacistRequest.module.css
@@ -7,6 +7,10 @@
   background-color: #96B7C7;
 }
 
+.logoContainer{
+  margin-top: 4%;
+}
+
 .secondBackground {
   position: relative;
   background-color: #FFFFFF;
