--- a/frontend/src/login/components/signupOptions.module.css
+++ b/frontend/src/login/components/signupOptions.module.css
@@ -22,6 +22,10 @@
     transform: translate(-50%, -50%);
 }
 
+.logoContainer{
+    margin-top: 3%;
+  }
+
 .leftSmallContainer{
     width: 35%;
     height: 35%;
