--- a/frontend/src/shared/components/NavBar/NavBar.css
+++ b/frontend/src/shared/components/NavBar/NavBar.css
@@ -21,9 +21,10 @@
 }
 
 .navbar-brand {
-  padding-left: 50px;
-  width: 180px;
-  height: 31px;
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  
   flex-shrink: 0;
   color: rgba(60, 90, 11, 0.61);
   font-family: 'Yeseva One', serif;
